# hgm

./: .gitignore  LICENSE  README.md  RESULTS.md  findings.md  progress.md  pyproject.toml  task_plan.md
.beads/: interactions.jsonl  issues.jsonl  metadata.json
docs/: ABLATION.md
experiments/: ablation.py  baseline.py  hard_loop.py  live_loop.py  live_selfimprove.py  live_smoke.py  run_simulated.py  significance.py  step0_minibaseline.py  sweep_drift.py  validate_scoring.py
src/hgm/: __init__.py  bandit.py  interfaces.py  mini_runner.py  real_backend.py  real_eval.py  search.py  self_improve.py  simulated.py  spend.py  tree.py  variant.py
tests/: test_bandit.py  test_cmp.py  test_cmp_beats_greedy.py  test_mini_runner.py  test_phase2_integration.py  test_search_harness.py  test_self_improve.py  test_spend.py
