[project]
name = "hgm"
version = "0.1.0"
description = "A clean-room reimplementation of the Huxley-Gödel Machine (arXiv:2510.21614)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mini-swe-agent>=2.3.0",
    "numpy>=1.26",
    "swebench>=4.1.0",
]

[project.optional-dependencies]
# Phase 2/3: real coding agent + evaluation. Kept optional so the simulated
# milestone needs nothing but numpy.
real = [
    "mini-swe-agent",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hgm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
